# affirmations-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/assets/sounds/: affirmations.json
src/cogs/: affirm.py
