[tool.poetry]
name = "affirmation-bot"
version = "0.1.0"
description = ""
authors = ["BeeMoe5 <48176165+BeeMoe5@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "affirmation_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = {extras = ["all"], version = "^2.4.0"}
uvloop = "^0.21.0"
python-dotenv = "^1.0.1"
pynacl = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
